--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@ button{
   display: inline-block;
   font-size: 16px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  transition-duration: 0.4s;
+
+}
+button:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
 }
 td {
   text-align: center;
@@ -41,6 +47,7 @@ td {
     border: 1px solid lime;
     padding: 8px;
   }
+  
   .post{
     color:white;
     background-color: blue;
